# videocall

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/videocall-dapp-backend/: Cargo.toml  videocall-dapp-backend.did
src/videocall-dapp-backend/src/: lib.rs  signaling.rs
src/videocall-dapp-frontend/: package.json  vite.config.js
src/videocall-dapp-frontend/src/: App.js  App.jsx
src/videocall-dapp-frontend/src/services/: websocketService.js
