[package]
name = "videocall-dapp-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"          # Matches your default and ic_websocket_example
ic-cdk = "0.16"          # Compatible with ic-websocket-cdk v0.4.1 per example
ic-cdk-timers = "0.11"   # Optional, keep if you need timers
ic-websocket-cdk = "0.4.1"  # Latest published version from crates.io
serde = { version = "1.0", features = ["derive"] }  # For serialization
serde_bytes = "0.11"      # For binary data (WebRTC signaling)
serde_json = "1.0"